added images2 source to index.html

--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
 <body>
     <div class="row">
         <div class="column">
-          <img src="ray1.png" alt="Snow" style="width:100%">
+          <img src="images2/ray4.png" alt="Snow" style="width:100%">
         </div>
         <div class="column">
-          <img src="ray2.png" alt="Forest" style="width:100%">
+          <img src="images2/ray5.png" alt="Forest" style="width:100%">
         </div>
         <div class="column">
-          <img src="ray3.png" alt="Mountains" style="width:100%">
+          <img src="images2/ray6.png" alt="Mountains" style="width:100%">
         </div>
       </div>
       
